# IsentaDB

./: Cargo.toml  LICENSE.txt
IsentaGUI/src/: index.html  main.js  styles.css
src/: database.rs  engine.rs  lib.rs  main.rs  parser.rs  storage.rs  wal.rs
tests/: cli_test.rs  type_aware_comparison_test.rs  where_clause_test.rs
